A touch of styling

--- a/src/pages/Main.scss
+++ b/src/pages/Main.scss
@@ -3,6 +3,7 @@
 #main {
   display: flex;
   flex-direction: column;
+  background: $background;
   border: 1px solid $secondary;
   padding: 5px;
   justify-content: flex-start;
