swap UL to div for consistent margins. remove component css

--- a/src/pages/Main.scss
+++ b/src/pages/Main.scss
@@ -1,17 +1,18 @@
 @import '../variables';
 
-#main {
-  display: flex;
-  flex-direction: column;
-  background: $background;
-  padding: 5px;
-  justify-content: flex-start;
-  align-items: stretch;
-  .nav {
-    display: flex;
-    button { width: 8rem; margin: 5px; }
-    @media (max-width: 600px) {
-      flex-direction: column;
-    }
-  }
-}
+
+//#main {
+//  display: flex;
+//  flex-direction: column;
+//  background: $background;
+//  padding: 5px;
+//  justify-content: flex-start;
+//  align-items: stretch;
+//  .nav {
+//    display: flex;
+//    button { width: 8rem; margin: 5px; }
+//    @media (max-width: 600px) {
+//      flex-direction: column;
+//    }
+//  }
+//}
