--- a/src/app.scss
+++ b/src/app.scss
@@ -32,6 +32,7 @@ body {
     @include container($primary);
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding: 10px;
     .item {
       display: flex;
@@ -39,12 +40,14 @@ body {
       justify-content: center;
       padding: 5px;
       margin: 5px;
+      border: 1px solid $secondary;
+      border-radius: 8px;
+      max-width: 400px;
       .title {
         display: flex;
         justify-content: space-between;
         align-items: center;
         padding: 5px;
-
         .expander {
           display: flex;
           cursor: pointer;
@@ -52,6 +55,9 @@ body {
           font-weight: bolder;
           flex-grow: 1;
           justify-content: flex-end;
+        }
+        .icon {
+          width: 30px;
         }
       }
       .content {
@@ -119,14 +125,12 @@ li {
   list-style-type: none;
 }
 
-a {
-  text-decoration: underline;
-  color: $secondary;
+a, a:visited {
+  text-decoration: none;
+  color: $white;
 }
 a:hover {
-  text-decoration: underline;
+  font-weight: bold;
 }
-a:visited {
-  color: $secondary;
-}
+
 
