--- a/src/variables.scss
+++ b/src/variables.scss
@@ -17,12 +17,15 @@ $hover: #E945FF;
 }
 
 @mixin dialog($color) {
-  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  max-width: 300px;
   background: $color;
   color: $white;
-  border: 1px solid $primary;
   padding: 8px;
-  border-radius: 8px;
+  margin: 5px;
+
   .name {
     display: flex;
     justify-content: space-between;
