--- a/src/app.scss
+++ b/src/app.scss
@@ -21,7 +21,7 @@ body {
     justify-content: center;
     button {
       width: 4rem;
-      border: 1px solid $primary;
+      border: 2px solid $primary;
       border-radius: 8px;
       background-color: $background;
       color: $white;
@@ -41,8 +41,8 @@ body {
   .list {
     @include container($primary);
     display: flex;
-    max-width: 400px;
-    width: 60%;
+    width: 80%;
+    max-width: 300px;
     flex-direction: column;
     align-items: center;
     padding: 3px;
@@ -50,7 +50,6 @@ body {
       display: flex;
       flex-direction: column;
       place-self: stretch;
-      //padding: 8px;
       margin: 5px;
       border: 2px solid $secondary;
       border-radius: 8px;
@@ -75,7 +74,6 @@ body {
             border-style: none;
             .info-circle {
               width: 28px;
-              filter: drop-shadow(0 0 0.15rem $hover);
             }
           }
         }
@@ -89,6 +87,7 @@ body {
         align-items: flex-start;
         flex-grow: 1;;
         padding: 0 10px;
+        font-size: 0.8rem;
       &:hover {
         max-height: 1000px;
         transition: all 0.5s cubic-bezier(1,0,1,0);
