Pointer on hover for info icon

--- a/src/app.scss
+++ b/src/app.scss
@@ -72,6 +72,7 @@ body {
             align-items: center;
             background: transparent;
             border-style: none;
+            cursor: pointer;
             .info-circle {
               width: 28px;
             }
