--- a/src/variables.scss
+++ b/src/variables.scss
@@ -6,9 +6,8 @@ $success: #32EF2E;
 $danger: #FA1313;
 $white: #FAFAFA;
 $disabled: #1C1C1C;
-$B: #FA1313;
-$active: #40F4FF;
-$hover: #E945FF;
+$active: #b395fe;
+$hover: #0ac6fe;
 
 @mixin container($color) {
   border-radius: 8px;
